--- a/login system/homePage.html
+++ b/login system/homePage.html
@@ -4,8 +4,8 @@
 </head>
 <body>
 	<h1>Home</h1>
-	<a href="registration.html">registration</a>
-	<a href="registration.html">registration</a>
+	<a href="registration.html">Registration</a>
+	<a href="login.html">Login</a>
 	
 	
 </body>
