--- a/login system/registration.html
+++ b/login system/registration.html
@@ -3,14 +3,20 @@
 	<title></title>
 </head>
 <body>
-   <form>
-    Username
-	 <input type ="text" name ="" value =""><br>
-	 Email 
-	 <input type="email" name="" value=""><br>
-	 Password 
-	 <input type="password" name="" value=""> <br>
-	 <input type="submit" name="" value="Submit"/>
-	
+   <form method="post" action="signupcheck.php">
+		<fieldset>
+			<legend>registration</legend>
+   <table>
+   <tr><td>
+      Username
+	 <input type ="text" name ="username" value =""></td>
+	 <td>Email 
+	 <input type="email" name="email" value=""></td>
+	 <td>Password 
+	 <input type="password" name="password" value="">
+	 <input type="submit" name="submit" value="Submit"></td>
+	</tr>
+   </table>
+   </fieldset>
    </form>
 </body>
