--- a/MID_LAB_TASK_HTML/Task_1/Page-1.html.html
+++ b/MID_LAB_TASK_HTML/Task_1/Page-1.html.html
@@ -23,10 +23,10 @@
                             <h3>Links</h3>
                             <table>
                                 <tr>
-                                    <td><a href="page1.html">Page 1</a></td>
+                                    <td><a href="Page-1.html">Page 1</a></td>
                                 </tr>
                                 <tr>
-                                    <td><a href="page2.html">Page 2</a></td>
+                                    <td><a href="Page-2.html">Page 2</a></td>
                                 </tr>
                             </table>
                         </td>
