--- a/MID_LAB_EXAM/login.html
+++ b/MID_LAB_EXAM/login.html
@@ -10,7 +10,7 @@
 			<table>
 				<tr>
 					<td>User Id:</td>
-					<td><input type="text" name="username" value=""></td>
+					<td><input type="id" name="userid" value=""></td>
 				</tr>
 				<tr>
 					<td>Password:</td>
