--- a/MID_LAB_EXAM/registration.html
+++ b/MID_LAB_EXAM/registration.html
@@ -10,7 +10,7 @@
 			<table>
 				<tr>
 					<td>Id:</td>
-					<td><input type="text" name="id" value=""></td>
+					<td><input type="id" name="id" value=""></td>
 				</tr>
 				<tr>
 					<td>Password:</td>
