--- a/MID_LAB_EXAM/userhome.html
+++ b/MID_LAB_EXAM/userhome.html
@@ -4,8 +4,10 @@
 </head>
 <body>
 	<h1>Welcome ANNE!</h1>
-	<a href="profile.html">Profile</a>
-	<a href="changepass.html">Change Password</a>
-	<a href="logout.html">Logout</a>
+	<tr>
+	<td><a href="profile.html">Profile</a></td>
+	<td><a href="changepass.html">Change Password</a></td>
+	<td><a href="logout.html">Logout</a></td>
+	</tr>
 </body>
 </html>
